--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,11 @@
     </developers>
 
     <dependencies>
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.39</version>
+        </dependency>
     </dependencies>
 
     <build>
