Initial worker job implementation.

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <developer>
             <name>Nikola Antic</name>
             <email>nantic14@raf.rs</email>
-            <id>nantic14</id>
+            <dataId>nantic14</dataId>
         </developer>
     </developers>
 
